# tabiya-livelihoods-classifier

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  cloudbuild.yaml  config.json  deploy-cloud-run-classifier-service.sh  docker-compose.yaml  docker-compose.yml  entity_linker.py  occ_eval.py  pyproject.toml  requirements.txt  run_classifier.py  train.py  transformer_crf_v3.py  utilfunctions.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend-ci.yml  build.yml  deploy-frontend.yml  deploy.yml  frontend-ci.yml  main.yml
app/: .env.example  README.md  index.html  job_data_access.py  package.json  repository.py  tsconfig.json  vite.config.ts
app/server/: classify_server.py  common.py  matching.py  nel_server.py  ner_server.py  occupations_en.csv
app/src/: App.tsx
app/worker/: change_stream_worker.py
backend/api-specifications/: classify-request.schema.json  classify-response.schema.json  nel-request.schema.json  nel-response.schema.json  ner-request.schema.json  ner-response.schema.json
backend/classify/: Dockerfile  pyproject.toml
backend/classify/classify/: batch_store.py  config.py  conftest.py  db.py  get_classify_service.py  main.py  models.py  openapi_merge.py  public_errors.py  service.py  test_db.py  test_public_errors.py  test_routes.py  test_service.py  user_config.py
backend/classify_v2/: Dockerfile  pyproject.toml
backend/classify_v2/classify_v2/: config.py  main.py
backend/classify_v2/classify_v2/app/classification/routes/: routes.py  test_routes.py
backend/classify_v2/classify_v2/app/classification/service/: errors.py  service.py  test_service.py  types.py
backend/classify_v2/classify_v2/app/version/: routes.py
backend/nel/: Dockerfile  pyproject.toml
backend/nel/nel/: conftest.py  get_nel_service.py  linker.py  main.py  models.py  service.py  test_linker_batch.py  test_routes.py  test_service.py
backend/nel/nel/files/: qualifications.csv
backend/nel/tests/: test_nel_schema.py
backend/nel_v2/: Dockerfile  pyproject.toml
backend/nel_v2/nel/: config.py  conftest.py  main.py
backend/nel_v2/nel/app/: retry.py  test_retry.py
backend/nel_v2/nel/app/embedding/service/: errors.py  service.py  test_service.py  types.py
backend/nel_v2/nel/app/embeddings_cache/: types.py
backend/nel_v2/nel/app/embeddings_cache/repository/: repository.py  test_repository.py
backend/nel_v2/nel/app/embeddings_cache/service/: generation_service.py  taxonomy_source.py  test_generation_service.py
backend/nel_v2/nel/app/linking/repository/: repository.py  test_repository.py
backend/nel_v2/nel/app/linking/routes/: _types.py  routes.py  test_routes.py
backend/nel_v2/nel/app/linking/service/: errors.py  service.py  test_service.py  types.py
backend/nel_v2/nel/app/nel_models/repository/: repository.py  test_repository.py
backend/nel_v2/nel/app/nel_models/routes/: _types.py  routes.py  test_routes.py
backend/nel_v2/nel/app/nel_models/service/: errors.py  service.py  test_service.py
backend/nel_v2/nel/app/server_dependencies/: database_collections.py  db_dependencies.py  test_db_dependencies.py
backend/nel_v2/nel/app/taxonomy_models/routes/: routes.py  test_routes.py
backend/nel_v2/nel/app/taxonomy_models/service/: errors.py  service.py  test_service.py  types.py
backend/nel_v2/nel/app/user_config/repository/: repository.py  test_repository.py
backend/nel_v2/nel/app/user_config/routes/: _types.py  auth.py  routes.py  test_routes.py
backend/nel_v2/nel/app/user_config/service/: service.py  test_service.py  types.py
backend/nel_v2/nel/app/version/: routes.py
backend/nel_v2/scripts/: _logging_handler.py  generate_embeddings.py  logging.cfg.yaml  seed_nel_models.py  seed_qualifications.py
backend/ner/: Dockerfile  pyproject.toml
backend/ner/ner/: conftest.py  get_ner_service.py  main.py  model.py  models.py  service.py  test_routes.py  test_service.py
backend/ner/tests/: test_ner_schema.py
backend/shared/: pyproject.toml
backend/shared/shared/: bio_utils.py  classified_job_schema.py  job_text.py  transformers_crf.py  unpickler.py
client/: client.css  client.html
docker/: Dockerfile.job  bake_models.py  entrypoint-service.sh  entrypoint.sh
docs/: index.html  package.json  vite.config.ts
docs/content/: mongodb-schema.md
docs/src/: App.tsx
evaluation/: pyproject.toml
evaluation/evaluation/: ir_evaluator.py  nel_evaluator.py  run.py
files/: qualifications.csv
iac/: .gitignore  README.md
iac/auth/: Pulumi.yaml  __main__.py  identity_platform.py
iac/aws-ns/: Pulumi.yaml  __main__.py  route53.py
iac/backend/: Pulumi.yaml  __main__.py  api_gateway.py  cloud_run.py  registry_and_iam.py  secrets.py  storage.py
iac/common/: Pulumi.yaml  __main__.py  dns_record.py  load_balancer.py
iac/dns/: Pulumi.yaml  __main__.py  dns_zone.py
iac/enable-services/: Pulumi.yaml  __main__.py
iac/frontend/: Pulumi.yaml  __main__.py  bucket_content.py  requirements.txt
iac/pulumi/: .gitignore  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py  api-gateway.ts  api_gateway.py  (+14 more)
inference/: DATA_LICENSE  README.md  config.json  evaluator.py  gemma_ner.py  linker.py  nel.py  ner.py  ner_llm.py
models/: README.md
scripts/: classifier_api_test.py  convert_gold_to_ner_jsonl.py  convert_green_to_ner_jsonl.py  finetune_gemma_ner.py  prepare_gemma_ner_dataset.py  prepare_ner_for_bake.sh  pseudo_label_job_descriptions.py  run_ner_on_jobs.py  start_local_classifier_stack.sh
server/: matching.py
test/: green_test.json  green_test_en.json  run_ner_eval.py  run_ner_eval_gemma.py  run_ner_eval_llm.py
tests/: test_classified_job_schema.py  test_classifier_cutoff_state.py  test_job_data_access.py  test_ner_nel_split.py  test_repository.py  test_worker_simulate.py
train/: README.md  config.json  cross_encoder_train.py  occ_eval.py  sbert_train.py  train.py
training/: pyproject.toml
training/training/: train_ner.py  train_ner_hf_dataset.py  train_sbert.py
util/: embedding_utils.py  job_text.py  ner_utils.py  transformersCRF.py  utilfunctions.py
(+53 files in other folders)
