# Root pyproject.toml — monorepo manifest only.
# Each service lives in its own subdirectory with its own pyproject.toml:
#   backend/shared/   — tabiya-shared (internal library)
#   backend/ner/      — ner service
#   backend/nel/      — nel service
#   backend/classify/ — classify service
#   evaluation/       — evaluation scripts
#   training/         — training scripts
#
# To set up a specific service:
#   cd backend/ner && poetry install

[tool.poetry]
name = "tabiya-livelihoods-classifier"
version = "1.0.0"
description = "Monorepo root — see subdirectory pyproject.toml files for services"
authors = ["Tabiya <tabiya@tabiya.org>"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
