[tool.poetry]
name = "tabiya-evaluation"
version = "0.1.0"
description = "Model evaluation scripts for Tabiya Livelihoods Classifier"
authors = ["Tabiya <tabiya@tabiya.org>"]
packages = [{ include = "evaluation" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
sentence-transformers = "^2.2.2"
pandas = "^2.0.3"
numpy = "^1.24.3"
tqdm = "^4.65.0"
tabiya-shared = { path = "../backend/shared", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
