[tool.poetry]
name = "tabiya-training"
version = "0.1.0"
description = "Model training scripts for Tabiya Livelihoods Classifier"
authors = ["Tabiya <tabiya@tabiya.org>"]
packages = [{ include = "training" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
transformers = "^4.32.1"
datasets = "^2.19.2"
evaluate = "^0.4.2"
seqeval = "^1.2.2"
nervaluate = "^0.2.0"
accelerate = "^0.31.0"
pandas = "^2.0.3"
numpy = "^1.24.3"
tqdm = "^4.65.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
