[tool.poetry]
name = "tabiya-classify"
version = "0.1.0"
description = "Classify orchestrator service for Tabiya Livelihoods Classifier"
authors = ["Tabiya <tabiya@tabiya.org>"]
packages = [{ include = "classify" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
httpx = "^0.27.0"
motor = "^3.4"
dnspython = "^2.6.0"
python-dotenv = "^1.0.1"
tabiya-shared = { path = "../shared", develop = true }
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
respx = "^0.21.0"
pymongo-inmemory = ">=0.4.2"

[tool.pytest.ini_options]
testpaths = ["classify"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
