[tool.poetry]
name = "tabiya-classify-v2"
version = "0.1.0"
description = "Classify v2 service — orchestrates NER + NEL v2 with full taxonomy schema"
authors = ["Tabiya <tabiya@tabiya.org>"]
packages = [{ include = "classify_v2" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
respx = "^0.21.0"

[tool.pytest.ini_options]
testpaths = ["classify_v2"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
