[tool.poetry]
name = "tabiya-nel"
version = "0.1.0"
description = "NEL service for Tabiya Livelihoods Classifier"
authors = ["Tabiya <tabiya@tabiya.org>"]
packages = [{ include = "nel" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pandas = "^2.0.3"
numpy = "^1.24.3"
python-dotenv = "^1.0.1"
tabiya-shared = { path = "../shared", develop = true }

[tool.poetry.group.inference.dependencies]
torch = "^2.1.2"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
testpaths = ["nel"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
