[tool.poetry]
name = "tabiya-ner"
version = "0.1.0"
description = "NER service for Tabiya Livelihoods Classifier"
authors = ["Tabiya <tabiya@tabiya.org>"]
packages = [{ include = "ner" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
torch = "^2.1.2"
transformers = "^4.32.1"
nltk = "^3.8.1"
python-dotenv = "^1.0.1"
tabiya-shared = { path = "../shared", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
