[tool.poetry]
name = "tabiya-shared"
version = "0.1.0"
description = "Shared utilities for Tabiya Livelihoods Classifier backend services"
authors = ["Tabiya <tabiya@tabiya.org>"]
packages = [{ include = "shared" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
transformers = "^4.32.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
